--- a/.hintrc
+++ b/.hintrc
@@ -4,6 +4,12 @@
   ],
   "hints": {
     "meta-charset-utf-8": "off",
-    "meta-viewport": "off"
+    "meta-viewport": "off",
+    "axe/text-alternatives": [
+      "default",
+      {
+        "document-title": "off"
+      }
+    ]
   }
 }
