--- a/.hintrc
+++ b/.hintrc
@@ -10,6 +10,12 @@
       {
         "document-title": "off"
       }
+    ],
+    "axe/structure": [
+      "default",
+      {
+        "list": "off"
+      }
     ]
   }
 }
