media: added Avatars to Leaderboards

--- a/.hintrc
+++ b/.hintrc
@@ -22,6 +22,12 @@
       {
         "duplicate-id": "off"
       }
+    ],
+    "axe/aria": [
+      "default",
+      {
+        "empty-table-header": "off"
+      }
     ]
   }
 }
