favico: Added (proper) favicons

--- a/.hintrc
+++ b/.hintrc
@@ -23,6 +23,7 @@
         "duplicate-id": "off",
         "duplicate-id-active": "off"
       }
-    ]
+    ],
+    "apple-touch-icons": "off"
   }
 }
