main: Added data dump json file to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -165,3 +165,4 @@ vue-games/package-lock.json
 static/images/daphne_profile_pic.png
 static/images/heather_flowers.jpg
 static/images/purple_flower_sml.jpg
+play2learn4_datadump.json
